[gd_scene load_steps=16 format=3 uid="uid://hhy78o5qolno"]

[ext_resource type="Script" uid="uid://bwnfpelh2b222" path="res://engine/scenes/stage_select/stage_select.gd" id="1_0kr35"]
[ext_resource type="Texture2D" uid="uid://dqe6i8xvwotle" path="res://assets/backgrounds/stages0.png" id="1_6aai7"]
[ext_resource type="PackedScene" uid="uid://bho6th882qje0" path="res://engine/scenes/stage_select/stages_overview.tscn" id="2_nrtxk"]
[ext_resource type="PackedScene" uid="uid://c3vf0fdejs72s" path="res://engine/scenes/stage_select/stage_details.tscn" id="4_26rrt"]
[ext_resource type="FontFile" uid="uid://dqdbst8avnfuo" path="res://assets/fonts/lady_radical.ttf" id="6_asf3s"]
[ext_resource type="Script" uid="uid://d1c6fxxsk1ugt" path="res://engine/resources/singletons/gui_enabler.gd" id="9_a0qlk"]
[ext_resource type="Texture2D" uid="uid://mds6jllxer0h" path="res://assets/sprites/icons.png" id="9_l3xwp"]
[ext_resource type="Script" uid="uid://bp8kqfn8liwqp" path="res://engine/resources/utility_node/fade_button.gd" id="9_xkiay"]
[ext_resource type="Texture2D" uid="uid://c1dflngu6flp4" path="res://assets/sprites/abandon.png" id="10_0nt55"]
[ext_resource type="Script" uid="uid://fhgkw1iml6g3" path="res://engine/resources/utility_node/tooltip_grabber.gd" id="11_dcp1b"]

[sub_resource type="LabelSettings" id="LabelSettings_pehmt"]
font = ExtResource("6_asf3s")
shadow_size = 0
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(0, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_baxs2"]
atlas = ExtResource("9_l3xwp")
region = Rect2(22, 44, 12, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_yjf3c"]
atlas = ExtResource("9_l3xwp")
region = Rect2(34, 44, 12, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_hle2i"]
atlas = ExtResource("10_0nt55")
region = Rect2(0, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_t66ta"]
atlas = ExtResource("10_0nt55")
region = Rect2(8, 0, 8, 8)

[node name="StageSelect" type="Control"]
layout_mode = 3
anchor_right = 0.25
anchor_bottom = 0.25
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(4, 4)
script = ExtResource("1_0kr35")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_6aai7")
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 335.0
offset_bottom = 144.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 24

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="StagesOverview" parent="MarginContainer/VBoxContainer" instance=ExtResource("2_nrtxk")]
unique_name_in_owner = true
layout_mode = 2

[node name="StageDetails" parent="MarginContainer/VBoxContainer" instance=ExtResource("4_26rrt")]
unique_name_in_owner = true
layout_mode = 2

[node name="QuestNameLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_top = 10.0
offset_right = -10.0
grow_horizontal = 0
size_flags_vertical = 1
text = "quest.glory-days"
label_settings = SubResource("LabelSettings_pehmt")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 10.0
offset_top = 7.0

[node name="BackToMenuButton" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
script = ExtResource("9_xkiay")
texture_normal = SubResource("AtlasTexture_baxs2")
texture_hover = SubResource("AtlasTexture_yjf3c")

[node name="TooltipGrabber" type="Node" parent="HBoxContainer/BackToMenuButton"]
script = ExtResource("11_dcp1b")
text = "scene-return.main"

[node name="AbandonButton" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
script = ExtResource("9_xkiay")
texture_normal = SubResource("AtlasTexture_hle2i")
texture_hover = SubResource("AtlasTexture_t66ta")

[node name="TooltipGrabber" type="Node" parent="HBoxContainer/AbandonButton"]
script = ExtResource("11_dcp1b")
text = "stage-select.button.abandon.title"
subtext = "stage-select.button.abandon.subtext"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(160, 90)

[node name="GuiEnabler" type="Node" parent="."]
script = ExtResource("9_a0qlk")
_disabled = 0

[connection signal="icon_selected" from="MarginContainer/VBoxContainer/StagesOverview" to="." method="_on_stages_overview_icon_selected"]
[connection signal="interacted" from="MarginContainer/VBoxContainer/StageDetails" to="." method="_on_stage_details_interacted"]
[connection signal="pressed" from="HBoxContainer/BackToMenuButton" to="." method="_on_back_to_menu_button_pressed"]
[connection signal="pressed" from="HBoxContainer/AbandonButton" to="." method="_on_abandon_button_pressed"]
